Fixed section margin spacing

--- a/src/stylesheets/stylesheet.scss
+++ b/src/stylesheets/stylesheet.scss
@@ -61,12 +61,18 @@ a { color: inherit; text-decoration: none;}
   box-sizing: border-box;
 }
 
+.section {
+  padding-top: 25px;
+  padding-bottom: 25px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 // Icon fonts.
 @import '_GlyphterIcons';
 
 // Responsive grid.
 @import '_BootstrapGrid';
-//@import '_FlexboxGrid';
 
 // Partials.
 @import '_SectionHome';
